# Projet_CV

./: CMakeLists.txt  Capture_photo.py  Interface_prise_photos.py  Projet_camera.py  README.md  StereoRectification.py  StereoRectification_StepbyStep.py  another_test.py  feature_matching.py  main.py  main_sparse_reconstruct.py  new_test.py  test.py  test_camera  test_caméra.py  triangulation.py  ztzygf.py
calibration/: StereoCalibration.py  calibration.py
disparity/: disparity.py
matching/: feature_matching.py  feature_matchingV1.py
reconstruction/: main_sparse_reconstruct.py  reconstruction.py
rectification/: StereoRectification.py  StereoRectification_StepbyStep.py
